test_programs/compile_failure/noirc_frontend_tests_cannot_determine_type_of_generic_argument_in_enum_constructor/src/main.nr

    enum Foo<T> {
        Bar,
    }

    fn main()
    {
        let _ = Foo::Bar;
    }

    